--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.6",
+    "bingmaps": "^2.0.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "leaflet": "^1.9.3",
+    "mapquest": "^0.2.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20"
   }
