--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 ACCESS_TOKEN_SECRET=123abc
-
-FRONTEND_URL=http://localhost:3000
+DATABASE=mongodb+srv://Shriyansh:iGwk0DcvosmtbcRO@cluster0.gpzb5.mongodb.net/?retryWrites=true&w=majority
+FRONTEND_URL
