--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "leaflet": "^1.9.3",
     "mapquest": "^0.2.0",
     "mongoose": "^6.9.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "validator": "^13.7.0"
   }
 }
