--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 ACCESS_TOKEN_SECRET=123abc
 DATABASE=mongodb+srv://Shriyansh:iGwk0DcvosmtbcRO@cluster0.gpzb5.mongodb.net/?retryWrites=true&w=majority
 FRONTEND_URL
+JWT_EXPIRE=30d
