--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 ACCESS_TOKEN_SECRET=123abc
-DATABASE=mongodb+srv://Shriyansh:iGwk0DcvosmtbcRO@cluster0.gpzb5.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://hackuser:LFH4ubZBXZaaWK9i@cluster0.fvgxptl.mongodb.net/?retryWrites=true&w=majority
 FRONTEND_URL
 JWT_EXPIRE=30d
+FRONTEND_URL=http://localhost:3000
