added user data insertion api call

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 ACCESS_TOKEN_SECRET=123abc
-DATABASE=mongodb+srv://hackuser:LFH4ubZBXZaaWK9i@cluster0.fvgxptl.mongodb.net/?retryWrites=true&w=majority
-FRONTEND_URL
 JWT_EXPIRE=30d
 FRONTEND_URL=http://localhost:3000
+DATABASE=mongodb+srv://Shriyansh:iGwk0DcvosmtbcRO@cluster0.gpzb5.mongodb.net/?retryWrites=true&w=majority
+
+APP_ID=4b1f2402
+APP_KEY=74be6a14508828951a071529221b7e0f
