add basic calorie burned feature

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DATABASE=mongodb+srv://Shriyansh:iGwk0DcvosmtbcRO@cluster0.gpzb5.mongodb.net/?re
 
 APP_ID=4b1f2402
 APP_KEY=74be6a14508828951a071529221b7e0f
+
+CALORIE_BURNED_API_KEY=BtZ3FKVg8tlfu0VORwTEDQ==JSxXbMjSf49DigG5
